# gpsd-glibclient

./: CMakeLists.txt
src/: gpsd_source.c  gpsd_source.h  main.c
